PA2/project_2.g4
grammar project_2;
prule: program;
query: re_name '<-' expr ';' ;
re_name: ident;
ident: ALPHA(ALPHA|DIGIT|'_')*;
ALPHA: [a-z]+|[A-Z]+;
DIGIT: [0-9]+;
WS: [ \t\n\r] + -> channel(HIDDEN);
expr: (atom_expr | selection | projection | renaming | union | difference | product);
atom_expr: (ident | '('expr')');
selection: 'select' '(' condition ')' atom_expr;
condition: (conjunction | comparison) ( '||' (conjunction | comparison) )*;
conjunction: comparison('&&' comparison)*;
comparison: operand op operand;
op: ('==' | '!=' | '<' | '>' | '<=' | '>=');
operand: ( attri_name | integer | literal );
attri_name: ident;
literal: '"' ident* '"';
projection: 'project' '(' attri_list ')' atom_expr;
attri_list: attri_name(',' attri_name)*;
renaming: 'rename' '(' attri_list ')' atom_expr;
union: atom_expr '+' atom_expr;
difference: atom_expr '-' atom_expr;
product: atom_expr '*' atom_expr;

command: (open_cmd | close_cmd | write_cmd | exit_cmd | show_cmd | create_cmd | update_cmd | insert_cmd | delete_cmd) ';';
open_cmd: 'OPEN' re_name;
close_cmd: 'CLOSE' re_name;
write_cmd: 'WRITE' re_name;
exit_cmd: 'EXIT';
show_cmd: 'SHOW' re_name;
create_cmd : 'CREATE TABLE' re_name '(' typed_attri_list (','(typed_attri_list))* ')' 'PRIMARY KEY' '(' attri_list ')';
update_cmd: 'UPDATE' re_name 'SET' attri_name '=' LITERAL{',' attri_name = literal} 'WHERE' condition;
insert_cmd : 'INSERT INTO' re_name 'VALUES FROM' '(' literal(',' (literal))* (',' integer) ')' | 'INSERT INTO' re_name 'VALUES FROM RELATION' expr;
delete_cmd: 'DELETE FROM' re_name 'WHERE' condition;
typed_attri_list: attri_name type;
type: 'VARCHAR' '(' integer ')' | 'INTEGER';
integer: DIGIT{DIGIT};

program: (query|command)*;
